* Applied patch by Adrian Panasiuk (Adek336) to fix the syslog output to insert   the <DROP> marker at the place data was dropped, not somewhere else. See   ticket #156; this might already fix this bug. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28278 a95241bf-73f2-0310-859d-f6bbb57e9c96